# glusterfs

./: Makefile  config.h  config.status  configure  git  git.pub  glusterfs-api.pc  libtool
api/: Makefile
api/examples/: Makefile
api/src/: Makefile  api.la  libgfapi.la
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cli/: Makefile
cli/src/: Makefile  gluster
contrib/fuse-util/: Makefile  fusermount-glusterfs
contrib/umountd/: Makefile
doc/: Makefile
extras/: Makefile
extras/LinuxRPM/: Makefile
extras/benchmarking/: Makefile
extras/firewalld/: Makefile
extras/ganesha/: Makefile
extras/geo-rep/: Makefile  gsync-sync-gfid
extras/hook-scripts/: Makefile
extras/init.d/: Makefile
extras/ocf/: Makefile
extras/snap_scheduler/: Makefile
extras/systemd/: Makefile  glusterd.service
geo-replication/: Makefile
geo-replication/src/: Makefile  gsyncd  peer_mountbroker
geo-replication/syncdaemon/: Makefile
glusterfsd/: Makefile
glusterfsd/src/: Makefile  glusterfsd
heal/: Makefile
heal/src/: Makefile  glfsheal
libglusterfs/: Makefile
libglusterfs/src/: Makefile  graph.lex.c  libglusterfs.la  libglusterfs_la-cluster-syncop.lo  libglusterfs_la-find_last_bit.lo  libglusterfs_la-parse-utils.lo  libglusterfs_la-quota-common-utils.lo  libglusterfs_la-refcount.lo  libglusterfs_la-rot-buffs.lo  libglusterfs_la-syncop-utils.lo  libglusterfs_la-timer-wheel.lo  libglusterfs_la-tw.lo  y.tab.c
rpc/: Makefile
tools/: Makefile
xlators/: Makefile
xlators/debug/smf/src/: Makefile  Makefile.am  Makefile.in
(+791 files in other folders)
